# Voice-Agent-Livekit-Python

./: .env.example  .gitignore  Dockerfile  MANCHESTER_DEMO.md  PROJECT-OUTLINE.md  README.md  dispatch_rule.json  dispatch_rule_update.json  livekit.toml  pyproject.toml  taskfile.yaml
.cursor/commands/: speckitconstitution.md
.github/workflows/: ruff.yml  tests.yml
config/: business_profile.json
data/: faqs.json
scripts/: uv-sync-macos-intel.sh
src/: agent.py
src/prompts/: stellar_styles_system_prompt.txt
tests/: test_agent.py
voice-agent-livekit-python/.cursor/commands/: speckit.constitution.md  speckit.contract.md  speckit.contract.test.md  speckit.evals.md  speckit.principles.md  speckit.specify.md  speckit.threat-model.md  speckit.versioning.md
voice-agent-livekit-python/.specify/specs/: telephone-customer-service-rep.md
