[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-starter-python"
version = "1.0.0"
description = "Simple voice AI assistant built with LiveKit Agents for Python"
requires-python = ">=3.10, <3.14"

dependencies = [
    "livekit-agents[silero,turn-detector]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "onnxruntime>=1.18,<=1.23.1; sys_platform == 'darwin' and platform_machine == 'x86_64' and platform_version >= '13.0'",
    "onnxruntime==1.19.2; sys_platform != 'darwin' or platform_machine != 'x86_64' or platform_version < '13.0'",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64' and platform_version >= '11.0'",
]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64' and platform_version >= '11.0'",
]
python-preference = "only-managed"

[tool.uv.pip]
python-platform = "x86_64-apple-darwin"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"